@@ -14,6 +14,7 @@ VERSION 1.1.6 (??? ?? ??:?? 2004)
 - Split on \s+ instead of \s where appropriate
 - Moved $rsync_include_args and $rsync_include_file_args into
   parse_config_file()
+- Removed the $have_{cmd} global variables entirely
 
 VERSION 1.1.5 (Jun 20 20:56 2004)
 ------------------------------------------------------------------------------
